brand new project

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -7,7 +7,9 @@
     <title>{{pageTitle}}</title>
 </head>
 <body>
+    
     {{> header}}
+    <p>Welcome to my website</p>
     {{> footer}}
     
 </body>
