--- a/views/project.hbs
+++ b/views/project.hbs
@@ -7,8 +7,12 @@
     <title>{{pageTitle}}</title>
 </head>
 <body>
+    
     {{> header}}
-    <p>the about page goes here</p>
+
+    <p>the project page goes here</p>
     {{> footer}}
+    
+    
 </body>
 </html>
