--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,5 +1,6 @@
 <header>
     <h1> {{pageTitle}} </h1>
-    <a href="/">home</a>
-    <a href="/about">about</a>
+    <p><a href="/">home</a></p>
+    <p><a href="/about">about</a></p>
+    <p><a href="/projects">projects</a></p>
 </header>
